smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/tagged-literals-invalid-hex.smithy
// Odd number of hex digits in hex string
$version: "2.1"

namespace smithy.example

structure Foo {
    @default(#hex "abc")
    data: Blob
}
